@@ -1,3 +1,7 @@
+2005-11-29  Adam Schreiber  <sadam@clemson.edu>
+    * plugins/gedit/seahorse-gedit.c: Fixed freeing uninitialized
+    pointer (Bug #322509)
+
 2005-11-12  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-ssh-key.c:
